git diff src/traceView/expression-data-explorer.js

--- a/src/navigationBar/navigation-bar.html
+++ b/src/navigationBar/navigation-bar.html
@@ -25,6 +25,14 @@
 		      </a>
 		    </div>
 		    <ul id="navbar-collapse-left" class="nav navbar-nav navbar-left" >
+		      	<li id = "navigationListItem">
+		      		<div id="resetNavigationBox">
+			          	<span id="resetNavigationButton">
+			          		<span class='glyphicon glyphicon-repeat'></span>
+							<label>Reset Navigation</label>
+						</span>
+					</div>
+			  	</li>
 		      	<li id = "historyListItem">
 			      <div>
 		          	<div id="historyBox">
