--- a/src/historyViewer/history-viewer.html
+++ b/src/historyViewer/history-viewer.html
@@ -1,8 +1,8 @@
 <template bindable="historyViewer">
     <require from = "./history-viewer.css"></require>
     <div class = "w3-row-padding">
-        <div class ="w3-col" style="width:150px">
-            <input name="slider" id="historySlider" type="range" min="1" max="50" value="1" step="1" />
+        <div class ="w3-col" style="width:150px; padding-top: 5px; padding-bottom: 5px;">
+            <div id="historySlider"></div>
         </div>
         <div class="w3-rest">
             <!--file_download-->
