--- a/src/tracePlayer/trace-player.html
+++ b/src/tracePlayer/trace-player.html
@@ -1,10 +1,10 @@
-<template bindable="tracePlay">
+<template bindable="tracePlayer">
     <div id = "play-toolbar" class="panel panel-debug">
         <div class="panel-heading w3-row-padding" role="toolbar" aria-label="play menu">
             <div class="w3-col panel-heading-title" style="width:115px">
                 <span class="glyphicon glyphicon-play-circle"></span>&#160;Trace Player
             </div>
-            <div class="btn-toolbar w3-col" style="width:170px">
+            <div class="btn-toolbar w3-col" style="width:220px">
                 <div class="btn-group" role="group" aria-label="play buttons">
                     <button class="btn btn-default btn-primary" id="prev" title="Previous">
                         <span class='glyphicon glyphicon-backward'></span>
@@ -21,6 +21,11 @@
                         <span class='glyphicon glyphicon-eye-open'></span>
                     </button>
                 </div>
+                <div class="btn-group" role="group" aria-label="Navigation Controls">
+			          	<button id="resetNavigationBox" class="btn btn-info"  title="Reset gutter navigation">
+			          		<span class='glyphicon glyphicon-repeat'></span>
+						</button>
+				</div>
             </div>
         </div>
     </div>
