--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
 		<!--src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"-->
 		<script src="include/firebase.js"></script>
 		<!--src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"-->
+		<!-- Ace version 1.2.4-->
 		<script src="include/ace.js"></script>
+		<script src="include/ext-language_tools.js"></script>
+		<script src="include/ext-spellcheck.js"></script>
+		<script src="include/ext-whitespace.js"></script>
 		<!--"https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"-->
 		<script src="include/firepad.js"></script>
 
