--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="styles/w3.css" />
 		<link rel="stylesheet" href="styles/css/bootstrap.css" />
 		<link rel="stylesheet" href="styles/split.js.css" />
+		<!--"https://cdn.firebase.com/libs/firepad/1.4.0/firepad.css"-->
+		<link rel="stylesheet" href="styles/firepad.css" />
 		<link rel="stylesheet" href="styles/firepad-user-list.css" />
 
 		<link rel="stylesheet" href="styles/index.css" />
@@ -104,7 +106,7 @@
 				bar.animate(1);
 		</script>
 
-		<!--src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"-->
+		<!--src="https://www.gstatic.com/firebasejs/3.0.3/firebase.js"-->
 		<script src="include/firebase.js"></script>
 		<!--src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"-->
 		<!-- Ace version 1.2.4-->
@@ -112,8 +114,8 @@
 		<script src="include/ext-language_tools.js"></script>
 		<script src="include/ext-spellcheck.js"></script>
 		<script src="include/ext-whitespace.js"></script>
-		<!--"https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"-->
-		<script src="include/firepad.js"></script>
+		<!--"https://www.gstatic.com/firebasejs/3.1.0/firebase.js"-->
+		<!--<script src="include/firepad.js"></script>-->
 
 		<script src="include/split.js"></script>
 		<script src="include/run_prettify.js"></script>
