--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				bar.animate(1);
 		</script>
 
-		<!--src="https://www.gstatic.com/firebasejs/3.0.3/firebase.js"-->
+		<!--"https://www.gstatic.com/firebasejs/3.1.0/firebase.js"-->
 		<script src="include/firebase.js"></script>
 		<!--src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"-->
 		<!-- Ace version 1.2.4-->
@@ -114,8 +114,8 @@
 		<script src="include/ext-language_tools.js"></script>
 		<script src="include/ext-spellcheck.js"></script>
 		<script src="include/ext-whitespace.js"></script>
-		<!--"https://www.gstatic.com/firebasejs/3.1.0/firebase.js"-->
-		<!--<script src="include/firepad.js"></script>-->
+
+		<script src="include/firepad.js"></script>
 
 		<script src="include/split.js"></script>
 		<script src="include/run_prettify.js"></script>
