added clear log action

--- a/src/consoleWindow/console-window.html
+++ b/src/consoleWindow/console-window.html
@@ -8,6 +8,7 @@
         <div id="console-window-footer-fill"></div>
         <div class= "console-window-footer">
             <label>${console.title}</label>
+            <span id = "consoleClear" class = 'glyphicon glyphicon-ban-circle' click.delegate = "console.clearLog()"></span>
             <span class = 'glyphicon glyphicon-console'></span>
             <span id = "consoleLogFeedback" class = 'glyphicon glyphicon-triangle-right'></span>
         </div>
