Added Object Explorer and Utils to render Any JS Object.

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -3,6 +3,7 @@
   <require from = "ace/ace-editor.css"></require>
   <require from = "pastebin/pastebin.css"></require>
   <require from = "traceView/trace-view.css"></require>
+  <require from = "traceView/collapsible-list.css"></require>
 
   <require from = "jsEditor/js-editor.html"></require>
   <require from = "jsGutter/js-gutter.html"></require>
@@ -65,8 +66,8 @@
             </div>
             <div id = "visualization-container" class = "tab-pane fade"  role = "tabpanel" aria-labelledby="visualizationTab">
               <trace-player tracePlayer.bind = "traceViewController.tracePlayer"></trace-player>
-              <trace-search trace-search.bind = "traceSearch"></trace-search>
               <vis-viewer vis-viewer.bind = "visViewer"></vis-viewer>
+              <trace-search trace-search.bind = "traceSearch"></trace-search>
             </div>
           </div>
         </div>
