--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="styles/css/bootstrap.css" />
 		<link rel="stylesheet" href="styles/split.js.css" />
 		<link rel="stylesheet" href="styles/firepad-user-list.css" />
+		<link rel="stylesheet" href="styles/tooltip-theme-arrows.css" />
 
 		<link rel="stylesheet" href="styles/index.css" />
 		<link rel="stylesheet" href="styles/navigation-bar.css" />
@@ -119,6 +120,9 @@
 		<script src="include/run_prettify.js"></script>
 
 		<script src="include/collapsible-lists.js"></script>
+		<script src="include/tether.min.js"></script>
+		<script src="include/drop.min.js"></script>
+		<script src="include/tooltip.min.js"></script>
 		<!--https://d3js.org/d3.v4.min.js-->
 		<script src="include/d3.v4.min.js"></script>
 
