--- a/src/tracePlayer/trace-player.html
+++ b/src/tracePlayer/trace-player.html
@@ -17,7 +17,7 @@
                     </button>
                 </div>
                 <div class="btn-group" role="group" aria-label="hide or show info">
-                    <button class="btn btn-warning" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Info">
+                    <button class="btn btn-warning" id="remove" title="Hide Info">
                         <span class='glyphicon glyphicon-eye-open'></span>
                     </button>
                 </div>
