Updates #Ace to 1.2.4 [latest build]. Fixes #187.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 		<script src="include/firebase.js"></script>
 		<!--src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"-->
 		<!-- Ace version 1.2.4-->
+    <!--Latest commit 21f7fa4  on Aug 16 @nightwing nightwing package 16.08.16-->
 		<script src="include/ace.js"></script>
 		<script src="include/ext-language_tools.js"></script>
 		<script src="include/ext-spellcheck.js"></script>
