--- a/src/htmlViewer/html-viewer.html
+++ b/src/htmlViewer/html-viewer.html
@@ -1,3 +1,4 @@
 <template bindable="Viewer">
-  <iframe id="htmlView" name="htmlView" src="about:blank" frameborder="0" width="100%" height="100%" scrolling="auto"></iframe>
+  <iframe id="htmlView" name="htmlView" src="about:blank" frameborder="0" width="100%" height="100%"
+          scrolling="auto"></iframe>
 </template>
