Fixes #190. Adds custom left gutter renderer: now it support elements besides text. Now navigation info is top-left and with smaller font than line numbers. Adds different navigator styles. Call Graph(visualizations) now fills container. New behavior for search and visualization interaction. Fixes library imports with cross-origin references. Added output.html as client code for iframe

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -62,7 +62,7 @@
           </ul>
           <div  class = "tab-content">
             <div id = "preview" class = "tab-pane fade in active" role = "tabpanel" aria-labelledby="previewTab">
-              <html-viewer></html-viewer>
+              <html-viewer html-viewer.bind="htmlViewer"></html-viewer>
             </div>
             <div id = "visualization-container" class = "tab-pane fade"  role = "tabpanel" aria-labelledby="visualizationTab">
               <trace-player tracePlayer.bind = "traceViewController.tracePlayer"></trace-player>
