--- a/src/htmlViewer/html-viewer.html
+++ b/src/htmlViewer/html-viewer.html
@@ -1,4 +1,6 @@
-<template bindable="Viewer">
-  <iframe id="htmlView" name="htmlView" src="about:blank" frameborder="0" width="100%" height="100%"
-          scrolling="auto"></iframe>
+<template bindable="htmlViewer">
+  <iframe id.bind="htmlViewer.webAppViewerId" name.bind="htmlViewer.webAppViewerId"
+          src.bind="htmlViewer.iFrameSourceUrl" frameborder="0" width="100%" height="100%"
+          scrolling="auto" sandbox="allow-forms allow-popups allow-scripts allow-same-origin allow-modals">
+  </iframe>
 </template>
