--- a/src/htmlViewer/html-viewer.html
+++ b/src/htmlViewer/html-viewer.html
@@ -1,6 +1,8 @@
 <template bindable="htmlViewer">
-  <iframe id.bind="htmlViewer.webAppViewerId" name.bind="htmlViewer.webAppViewerId"
-          src.bind="htmlViewer.iFrameSourceUrl" frameborder="0" width="100%" height="100%"
-          scrolling="auto" sandbox="allow-forms allow-popups allow-scripts allow-same-origin allow-modals">
+  <iframe
+    id.bind="htmlViewer.webAppViewerId"
+    name.bind="htmlViewer.webAppViewerId"
+    src.bind="htmlViewer.iFrameSourceUrl"
+  >
   </iframe>
 </template>
