Adds debugger mode to trace instrumentation. Now it is easier to see console errors. Refactors chat variables as attributes. Firebase Manager now associates shared pastebins with their parents and viceversa. Removes forgotten console logs and errors in visualization/. Limits the size of string values in the object viewer used in the values pop-up.

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -19,7 +19,7 @@
     <div id = "main-splitter-left"  class = "split split-horizontal container-fluid">
       <ul id = "codeTabs" class = "nav nav-tabs" role = "tablist">
         <li id =  "jsTab" class = "active" role = "tab" aria-controls = "js-container">
-          <a href = "#js-container" data-toggle = "tab">Javascript</a></li>
+          <a href="#js-container" data-toggle="tab">JavaScript</a></li>
         <li id =  "htmlTab" role = "tab" aria-controls = "html-container">
           <a href = "#html-container" data-toggle = "tab">HTML</a></li>
         <li id =  "cssTab" role = "tab" aria-controls = "css-container">
