Adds "find in file" to editors. Autocomplete action tracking. Editors have control+q or command +q to toggle Searcher Searcher takes focus when shown and appears to the right of editing cursor Editors publish copy and paste actions Searcher keeps track of copy vs paste to determine external content Persistence added to search queries and their results, votes and other content.

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -15,6 +15,8 @@
   <require from = "tracePlayer/trace-player.html"></require>
   <require from = "traceSearch/trace-search.html"></require>
 
+  <require from="searcher/searcher.html"></require>
+
   <div id = "mainContainer" class = "box-shadow-bottom">
     <div id = "main-splitter-left"  class = "split split-horizontal container-fluid">
       <ul id = "codeTabs" class = "nav nav-tabs" role = "tablist">
@@ -77,5 +79,6 @@
         </div>
       </div>
     </div>
+    <searcher> searcher.bind = "searcher"</searcher>
  </div>
 </template>
