Adding history slider back

--- a/src/cssEditor/css-editor.html
+++ b/src/cssEditor/css-editor.html
@@ -1,3 +1,4 @@
 <template bindable="cssEditor">
   <pre id="cssEditorDiv"></pre>
+  <pre id="cssEditorDivHistory" style="display: none"></pre>
 </template>
