--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,3 +1,4 @@
 <template bindable="htmlEditor">
   <pre id.bind="htmlEditor.aceHtmlEditorDiv"></pre>
+  <pre id="aceHtmlEditorDivHistory" style="display: none"></pre>
 </template>
