--- a/src/jsEditor/js-editor.html
+++ b/src/jsEditor/js-editor.html
@@ -1,3 +1,4 @@
 <template bindable="jsEditor">
   <pre id="aceJsEditorDiv"></pre>
+  <pre id="aceJsEditorDivHistory" style="display: none"></pre>
 </template>
