--- a/src/navigationBar/navigation-bar.html
+++ b/src/navigationBar/navigation-bar.html
@@ -24,22 +24,22 @@
 			    </div>
 		      </a>
 		    </div>
-		 <!--   <ul id="navbar-collapse-left" class="nav navbar-nav navbar-left" >-->
-		    <!--  	<li id = "navigationListItem">-->
+      <ul id="navbar-collapse-left" class="nav navbar-nav navbar-left">
+        <li id="navigationListItem">
 
-			  	<!--</li>-->
-		 <!--     	<li id = "historyListItem">-->
-			<!--      <div>-->
-		 <!--         	<div id="historyBox">-->
-		 <!--           	<history-viewer historyViewer.bind = "historyViewer"></history-viewer>-->
-		 <!--         	</div>-->
-		 <!--         	<span id="historyButton">-->
-		 <!--         		<span class='glyphicon glyphicon-edit'></span>-->
-			<!--			<label>History</label>-->
-			<!--		</span>-->
-			<!--	  </div>-->
-			<!--  	</li>-->
-			<!--</ul>-->
+        </li>
+        <li id="historyListItem">
+          <div>
+            <div id="historyBox">
+              <history-viewer historyViewer.bind="historyViewer"></history-viewer>
+            </div>
+            <span id="historyButton">
+		          		<span class='glyphicon glyphicon-edit'></span>
+						<label>History</label>
+					</span>
+          </div>
+        </li>
+      </ul>
 			<ul id="navbar-collapse-right" class="nav navbar-nav navbar-right" >
 		        <li id = "shareListItem">
 		          <div>
