Aded new logo. Fixes #215

--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
 	<body aurelia-app="main">
 		<div id="navigation-bar" class="container-fluid">
 			<nav class="navbar-xs navbar " role="navigation">
-				<div class="navbar-header">
-			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-right">
-			        <span class='glyphicon glyphicon-menu-hamburger'></span>
-			      </button>
-			      <a class="navbar-brand">
-			      	<div class="logo seecoderun-text-blue">
-					       <!--youtube_searched-->
-					       <i class="material-icons">&#xE8FA;</i>
-					       <!--chevron_left-->
-					       <i class="material-icons">&#xE5CB;</i>
-					       <i class="material-icons seecoderun-font-title">js</i>
-					       <!--chevron_right-->
-					       <i class="material-icons">&#xE5CC;</i>
-					       <i class="material-icons seecoderun-font-title">.</i>
-					       <!--play_circle_outline-->
-					       <i class="material-icons">&#xE039;</i>
-				    </div>
-			      </a>
-			    </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-right">
+            <span class='glyphicon glyphicon-menu-hamburger'></span>
+          </button>
+          <!--<a onclick="window.open('https://seecode.run/', '_blank');">-->
+          <!--<div class="logo seecoderun-text-blue">-->
+          <!--&lt;!&ndash;youtube_searched&ndash;&gt;-->
+          <!--<i class="material-icons">&#xE8FA;</i>-->
+          <!--&lt;!&ndash;chevron_left&ndash;&gt;-->
+          <!--<i class="material-icons">&#xE5CB;</i>-->
+          <!--<i class="material-icons seecoderun-font-title">js</i>-->
+          <!--&lt;!&ndash;chevron_right&ndash;&gt;-->
+          <!--<i class="material-icons">&#xE5CC;</i>-->
+          <!--<i class="material-icons seecoderun-font-title">.</i>-->
+          <!--&lt;!&ndash;play_circle_outline&ndash;&gt;-->
+          <!--<i class="material-icons">&#xE039;</i>-->
+          <!--</div>-->
+          <img  src="../../res/scrLogo.png" onclick="window.open('https://seecode.run/', '_blank');">
+          <!--</a>-->
+        </div>
 				<ul id="navbar-collapse-right" class="nav navbar-nav navbar-right" >
 			        <li>
 			          <div>
