Basic URL data shown in container

--- a/src/searcher/searcher-container.html
+++ b/src/searcher/searcher-container.html
@@ -4,7 +4,7 @@
     <div  class='seecoderun-chat-toolbar'>
       <input type='text'  placeholder='Type search Here...'>
     </div>
-    <ul ></ul>
+    <ul id="urlList"></ul>
     <footer>
       <input type='text'  placeholder='Type search Here...'>
     </footer>
