Updates all NPM dependencies. Fixes typescriptServices e.kind undefined errors. Updates index.html metadata. Updates withRoots to comply MUI beta-30. Adds Editor hover action, MUI Popover now non-modal. Playground logging dispatch store changes. Fixes Epics missing Ajax requests, adds network disconnect fail-over.

--- a/scr-app/public/index.html
+++ b/scr-app/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="user-scalable=0, initial-scale=1, minimum-scale=1, width=device-width, height=device-height">
+  <!-- PWA primary color -->
   <meta name="theme-color" content="#000000">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--
     manifest.json provides metadata used when your web app is added to the
     homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -45,6 +45,7 @@
   <title>seeCode.run</title>
 </head>
 <body>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <noscript>
   You need to enable JavaScript to run this app.
 </noscript>
